Fix header layout bug sitting too high

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -184,59 +184,73 @@ button {
       }
     }
 
-    .nav-buttons {
+    .nav-buttons__outer {
       position: relative;
       height: 100%;
     }
     @media (max-width: 700px) {
-      .nav-buttons{
+      .nav-buttons__outer {
         margin-left: auto;
         margin-right: auto;
         width: 158px;
       }
     }
 
-    .nav-button {
-      cursor: pointer;
-      float: left;
-      font-family: Vonique;
-      font-size: 12px;
-      letter-spacing: 1px;
-      padding-left: 15px;
-      padding-right: 15px;
-      position: relative;
-      text-align: center;
-      text-transform: uppercase;
-      top: 50%;
-      transition: all 0.5s;
-      -webkit-transform: translateY(-50%);
-      -moz-transform:    translateY(-50%);
-      -ms-transform:     translateY(-50%);
-      -o-transform:      translateY(-50%);
-      transform:         translateY(-50%);
-    }
-    @media (max-width: 700px) {
-      .nav-button{
-        padding-bottom: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
-        -webkit-transform: none;
-        -moz-transform:    none;
-        -ms-transform:     none;
-        -o-transform:      none;
-        transform:         none;
+      .nav-buttons__inner {
+        position: relative;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -moz-transform:    translateY(-50%);
+        -ms-transform:     translateY(-50%);
+        -o-transform:      translateY(-50%);
+        transform:         translateY(-50%);
       }
-    }
-
-    .nav-button:hover {
-      color: #7d7d7d;
-    }
-
-    @media (max-width: 700px) {
-      .video-filter {
-        display: none;
+      @media (max-width: 700px) {
+        .nav-buttons__inner {
+          top: 0;
+          -webkit-transform: none;
+          -moz-transform:    none;
+          -ms-transform:     none;
+          -o-transform:      none;
+          transform:         none;
+        }
       }
-    }
+
+        .nav-button {
+          cursor: pointer;
+          float: left;
+          font-family: Vonique;
+          font-size: 12px;
+          letter-spacing: 1px;
+          padding-left: 15px;
+          padding-right: 15px;
+          text-align: center;
+          text-transform: uppercase;
+          transition: all 0.5s;
+
+        }
+        @media (max-width: 700px) {
+          .nav-button{
+            padding-bottom: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            -webkit-transform: none;
+            -moz-transform:    none;
+            -ms-transform:     none;
+            -o-transform:      none;
+            transform:         none;
+          }
+        }
+
+        .nav-button:hover {
+          color: #7d7d7d;
+        }
+
+        @media (max-width: 700px) {
+          .video-filter {
+            display: none;
+          }
+        }
 
   .videos {
   }
